--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,8 @@
   --course-community-1:#96C500;
   --course-community-2:#667000;
   --course-community-3:#165000;
+  --exit-red:#E14150;
+  --red-background:#FFE1E4;
 }
 
 @media (prefers-color-scheme: dark) {
